WSIO-714 display Table of Contents error message in edit mode

--- a/applications/blogs/backend/src/main/resources/libs/kyanite/blogs/components/blogposttableofcontents/blogposttableofcontents.html
+++ b/applications/blogs/backend/src/main/resources/libs/kyanite/blogs/components/blogposttableofcontents/blogposttableofcontents.html
@@ -20,6 +20,9 @@
   <sly data-sly-test="${model.isHidden && wcmmode.isEdit}">
     <div class="blog-back-button-placeholder">This component will be hidden on the page.</div>
   </sly>
+  <sly data-sly-test="${model.hierarchyErrorMessage && wcmmode.isEdit}">
+    <div class="has-text-danger">${model.hierarchyErrorMessage}</div>
+  </sly>
   <sly data-sly-test="${!model.isHidden}">
     <div class="blog-table-of-content">
       <label class="table-label">${model.title}</label>
