--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/search/templates/editModeStub.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/search/templates/editModeStub.html
@@ -31,7 +31,7 @@
           <span>Search ${model.searchEndpoint}</span>
         </sly>
         <sly data-sly-test="${!endpoint}">
-          <span style="color: red;">Search endpoint is not set</span>
+          <span class="has-text-danger">Search endpoint is not set</span>
         </sly>
         <div class="aa-DetachedSearchButtonQuery"></div>
       </div>
