--- a/applications/blogs/backend/src/main/resources/libs/kyanite/blogs/components/blogarticleauthorbio/templates/template-default.html
+++ b/applications/blogs/backend/src/main/resources/libs/kyanite/blogs/components/blogarticleauthorbio/templates/template-default.html
@@ -17,9 +17,9 @@
 
 */-->
 
-<template data-sly-template.default="${ @ model}">
+<template data-sly-template.template="${ @ model}">
   <sly data-sly-test.author="${model.authorInfoModel}">
-    <div class="container blog-article-author-bio">
+    <div class="container blog-article-author-bio layout-default">
       <div class="author-bio-block author-info">
         <article class="id media">
           <figure class="photo media-left">
