WSIO-716 Update preview image container selector

--- a/applications/common/frontend/src/components/Image/Image.scss
+++ b/applications/common/frontend/src/components/Image/Image.scss
@@ -48,7 +48,7 @@ $color-shadow-end: rgba(#605e78, 0.07);
   padding-right: 15px;
 }
 
-.blogArticleContent {
+.previewImageContainer {
 
   .image {
     position: relative;
