WSIO-718 fix Quote line style

--- a/applications/common/frontend/src/atomic-design-system/01-atom/a.line-placeholder.scss
+++ b/applications/common/frontend/src/atomic-design-system/01-atom/a.line-placeholder.scss
@@ -21,7 +21,7 @@
 @mixin a-line-placeholder ($--line-placeholder-width, $--line-placeholder-margin-right) {
 
   position: relative;
-  padding-left: ($--line-placeholder-width + $--line-placeholder-margin-right);
+  padding-left: calc($--line-placeholder-width + $--line-placeholder-margin-right);
 
   &:before {
     content: "";
