WSIO-732 Introduce mechanism to calculate colspans for table cells that don't have "Columns" explicitly set

--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/table/tablecell/tablecell.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/table/tablecell/tablecell.html
@@ -17,7 +17,7 @@
 */-->
 
 <sly data-sly-use.model="pl.ds.kyanite.common.components.models.table.TableCellComponent">
-  <td rowspan="${model.rows}" colspan="${model.columns}">
+  <td rowspan="${model.rowspan}" colspan="${model.colspan}">
     ${model.text @ context='unsafe'}
   </td>
 </sly>
