--- a/applications/blogs/backend/src/main/resources/libs/kyanite/blogs/components/blogarticleauthorbio/templates/template-default.html
+++ b/applications/blogs/backend/src/main/resources/libs/kyanite/blogs/components/blogarticleauthorbio/templates/template-default.html
@@ -19,10 +19,11 @@
 
 <template data-sly-template.template="${ @ model}">
   <sly data-sly-test.author="${model.authorInfoModel}">
-    <div class="container blog-article-author-bio layout-default">
+    <article class="blog-article-author-bio layout-default container
+        is-flex is-flex-wrap-wrap is-justify-content-space-between">
       <div class="author-bio-block author-info">
-        <article class="id media">
-          <figure class="photo media-left">
+        <div class="author-short-info is-flex is-flex-align-items-center">
+          <figure class="author-photo">
             <p class="image is-96x96">
               <sly data-sly-set.leadsToAuthorPage="
               ${ (    (author.authorOwnerPath != null)
@@ -37,29 +38,28 @@
             </p>
           </figure>
 
-          <div class="media-content">
-            <div class="content">
-              <p data-sly-test.authorName="${author.authorName}"
-                 class="name">${authorName}</p>
-              <p data-sly-test.authorRole="${author.authorRole}"
-                 class="role">${authorRole}</p>
-            </div>
+          <div class="content is-align-self-center">
+            <p data-sly-test.authorName="${author.authorName}"
+               class="author-name">${authorName}</p>
+            <p data-sly-test.authorRole="${author.authorRole}"
+               class="author-role">${authorRole}</p>
           </div>
-        </article>
+        </div>
 
-        <div class="description content">
-          <p data-sly-test.authorDescription="${author.authorDescription}">${authorDescription}</p>
+        <div data-sly-test.authorDescription="${author.authorDescription}"
+             class="author-description content">
+          <p>${authorDescription}</p>
         </div>
 
       </div>
       <div class="author-bio-block social-media">
         <sly data-sly-set.socialMediaMode=
                  "${ (    (author.authorOwnerPath == currentPage.path)
-                 || (author.authorOwnerPath == resource.path))
+                       || (author.authorOwnerPath == resource.path))
                ? wcmmode.editModeAttribute
                : wcmmode.previewModeAttribute}"></sly>
         <sly data-sly-resource="${author.socialMedia @ requestAttributes=socialMediaMode}"></sly>
       </div>
-    </div>
+    </article>
   </sly>
 </template>
