--- a/applications/blogs/backend/src/main/resources/libs/kyanite/blogs/components/blogarticleauthorbio/blogarticleauthorbio.html
+++ b/applications/blogs/backend/src/main/resources/libs/kyanite/blogs/components/blogarticleauthorbio/blogarticleauthorbio.html
@@ -20,10 +20,7 @@
   <sly data-sly-use.template="./template-default.html"
        data-sly-call="${template.default @ model=model}">
   </sly>
-  <sly data-sly-test="${wcmmode.isEdit}">
-    <sly data-sly-test.errMessage="${model.authorInfoErrMessage}">
-      <div>Failed to retrieve author info</div>
-      <div>${errMessage}</div>
-    </sly>
+  <sly data-sly-use.template="../common/templates/authorinfo/template-edit-mode-error-message.html"
+       data-sly-call="${template.template @ model=model}">
   </sly>
 </sly>
