--- a/applications/common/frontend/src/bulma-overwrite-v1/_index.scss
+++ b/applications/common/frontend/src/bulma-overwrite-v1/_index.scss
@@ -91,6 +91,9 @@
     --kyanite-gray-15-l: 16%; // #2A2A2A old grey-900
     --kyanite-gray-10-l: 9%;  // #181818 old grey-1000
 
+    --kyanite-custom-codesnippet-icon-message-background-color: var(--kyanite-primary);
+    --kyanite-custom-codesnippet-icon-message-color: var(--kyanite-white);
+
   .button {
     --kyanite-control-radius: var(--border-radius-1);
   }
@@ -138,7 +141,7 @@
     --kyanite-custom-codesnippet-icon-mobile-color: var(--kyanite-text);
     --kyanite-custom-codesnippet-icon-hover-code-color: var(--kyanite-text);
     --kyanite-custom-codesnippet-icon-hover-color: var(--kyanite-primary);
-    --kyanite-custom-codesnippet-icon-message-color: var(--kyanite-primary-100);
+    --kyanite-custom-codesnippet-icon-message-color: var(--kyanite-white);
     --kyanite-custom-codesnippet-icon-message-background-color: var(--kyanite-primary);
     --kyanite-custom-codesnippet-border-color: var(--kyanite-light);
 
@@ -238,7 +241,7 @@
     --kyanite-custom-codesnippet-icon-mobile-color: var(--kyanite-gray-15);
     --kyanite-custom-codesnippet-icon-hover-code-color: var(--kyanite-gray-15);
     --kyanite-custom-codesnippet-icon-hover-color: var(--kyanite-primary);
-    --kyanite-custom-codesnippet-icon-message-color: var(--kyanite-primary-100);
+    --kyanite-custom-codesnippet-icon-message-color: var(--kyanite-white);
     --kyanite-custom-codesnippet-icon-message-background-color: var(--kyanite-primary);
     --kyanite-custom-codesnippet-border-color: var(--kyanite-gray-90);
   }
