--- a/applications/common/frontend/src/components/CodeSnippet/codesnippet.scss
+++ b/applications/common/frontend/src/components/CodeSnippet/codesnippet.scss
@@ -60,6 +60,9 @@
       @extend .px-5;
 
       background-color: var(--kyanite-custom-codesnippet-code-background-color) !important; // overwrite hljs (highlight.js)
+      &.hljs {
+        padding: 0 1em; // simplebar is adding padding
+      }
     }
   }
 
@@ -118,7 +121,7 @@
     border-radius: var(--border-radius-2);
 
     // fits text in 1 line, can not do 100% as it's just icons width, have to do it manually like that
-    width: 170px;
+    width: 90px;
 
     // 16px = 1rem ('4') is a distance between edge of the tooltip and  endge of the icon container.
     transform: translateX(
@@ -170,5 +173,65 @@
       visibility: visible;
       opacity: 1;
     }
+  }
+
+  // expand / collapse styles
+  .code-snippet__footer {
+    display: none;
+  }
+  &.expanding-on {
+    code {
+      position: relative;
+      &:before {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100px;
+        bottom: 0;
+        left: 0;
+        z-index: 1;
+        background: linear-gradient(0deg, rgba(249, 249, 250, 1) 25%, rgba(249, 249, 250, 0.88) 41%, rgba(249, 249, 250, 0.79) 58%, rgba(249, 249, 250, 0.7) 67%, rgba(27, 28, 32, 0) 100%);
+      }
+    }
+    &.is-expanded {
+      code:before {
+        content: none;
+      }
+    }
+    code {
+      overflow-y: hidden;
+      transition: max-height 0.3s ease-out;
+    }
+    .code-snippet__pre {
+      padding-bottom: 0 !important;
+      border-bottom-left-radius: 0;
+      border-bottom-right-radius: 0;
+    }
+    .code-snippet__footer {
+      background-color: var(--kyanite-custom-codesnippet-code-background-color);
+      border-bottom-left-radius: var(--border-radius-2);
+      border-bottom-right-radius: var(--border-radius-2);
+      display: flex;
+      justify-content: center;
+      padding: 0.5rem;
+      .code-snippet-button {
+        display: flex;
+        align-items: center;
+        border-radius: 64px;
+        padding: 8px 12px 8px 16px;
+      }
+    }
+    .code-snippet__footer {
+      display: flex;
+    }
+  }
+  &.is-expanded {
+    .code-snippet-button i {
+      transform: rotate(180deg);
+    }
+  }
+
+  .simplebar-scrollbar:before {
+    background: var(--kyanite-body-color);
   }
 }
