--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/table/table.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/table/table.html
@@ -18,12 +18,27 @@
 
 <sly data-sly-use.model="pl.ds.kyanite.common.components.models.table.TableComponent">
   <sly data-sly-set.classes="table ${model.tableClasses @ join=' '}"></sly>
+  <sly data-sly-set.containerClasses="${model.tableContainerClasses @ join=' '}"></sly>
   <sly data-sly-test="${resource.hasChildren}">
-    <div data-sly-unwrap="${!model.isScrollable}" class="table-container">
-      <table class="${classes}">
-        <sly
-            data-sly-include="${'parsys.html' @ prependPath='/libs/wcm/foundation/components/parsys'}"></sly>
-      </table>
+    <!--/* 
+      ~   "data-table-component='true'" should be always on the first tag of this html template. 
+      ~   It is used to find component in additional table actions in "extensions" folder.
+    */-->
+    <div class="table-container-el ${containerClasses}" data-table-component="true">
+      <div data-sly-test="${model.isScrollable}" class="table-button-container">
+        <button class="table-button table-button-left" aria-label="Scroll to the left">
+          <i class="mdi mdi-arrow-left"></i>
+        </button>
+        <button class="table-button table-button-right" aria-label="Scroll to the right">
+          <i class="mdi mdi-arrow-right"></i>
+        </button>
+      </div>
+      <div class="table-wrapper ${model.isFirstColumnLocked ? 'is-first-column-locked' : ''}">
+        <table class="${classes}">
+          <sly
+              data-sly-include="${'parsys.html' @ prependPath='/libs/wcm/foundation/components/parsys'}"></sly>
+        </table>
+      </div>
     </div>
   </sly>
   <sly data-sly-test="${!resource.hasChildren}">
