WSIO-708 correct typo

--- a/applications/blogs/backend/src/main/resources/libs/kyanite/blogs/components/blogarticleheader/templates/template-default.html
+++ b/applications/blogs/backend/src/main/resources/libs/kyanite/blogs/components/blogarticleheader/templates/template-default.html
@@ -63,7 +63,7 @@
                src="${heroImage}"
                alt="${blog.heroImageAlt}">
           <img class="is-hidden-tablet"
-               idth="360" height="200"
+               width="360" height="200"
                src="${blog.heroImageMobile ? blog.heroImageMobile : blog.heroImage}"
                alt="${blog.heroImageAlt}">
         </figure>
