--- a/applications/blogs/backend/src/main/resources/libs/kyanite/blogs/components/blogposttableofcontents/blogposttableofcontents.html
+++ b/applications/blogs/backend/src/main/resources/libs/kyanite/blogs/components/blogposttableofcontents/blogposttableofcontents.html
@@ -17,31 +17,31 @@
 */-->
 
 <sly data-sly-use.model="pl.ds.kyanite.blogs.components.models.BlogPostTableOfContentsComponent">
-    <sly data-sly-test="${model.isHidden && wcmmode.isEdit}">
-        <div class="blog-back-button-placeholder">This component will be hidden on the page.</div>
-    </sly>
-    <sly data-sly-test="${!model.isHidden}">
-        <div data-sly-test="${model.items}" class="blog-table-of-content">
-            <label class="table-label">${model.title}</label>
-            <ul class="table-content-list">
-                <div data-sly-list.item="${model.items}" data-sly-unwrap>
-                    <sly data-sly-test="${item.title}">
-                        <li class="button is-ghost table-content-list__item--${item.headingLevel}">
-                            <a class="" data-sly-attribute.href="#${item.url}">
-                                ${item.title}
-                            </a>
-                        </li>
-                    </sly>
-                </div>
-            </ul>
-            <sly data-sly-test="${model.showBackToTopButton}">
-                <a class="table-content-button" data-sly-attribute.href="#">
-                    <span class="table-content-button__label">
-                        <span class="mdi mdi-arrow-up"></span>
-                        <span>${model.backToTopButtonLabel}</span>
-                    </span>
-                </a>
+  <sly data-sly-test="${model.isHidden && wcmmode.isEdit}">
+    <div class="blog-back-button-placeholder">This component will be hidden on the page.</div>
+  </sly>
+  <sly data-sly-test="${model.hierarchyErrorMessage && wcmmode.isEdit}">
+    <div class="has-text-danger">${model.hierarchyErrorMessage}</div>
+  </sly>
+  <sly data-sly-test="${!model.isHidden}">
+    <div class="blog-table-of-content">
+      <label class="table-label">${model.title}</label>
+        <sly data-sly-test.titles="${model.subTitles}">
+            <ul class="table-content-list" data-simplebar data-simplebar-auto-hide="false">
+            <sly data-sly-list.title="${titles}">
+                <sly data-sly-use.template="./templates/template-table-of-contents-element.html"
+                    data-sly-call="${template.title @ title=title}"></sly>
             </sly>
-        </div>
-    </sly>
+            </ul>
+        </sly>
+        <sly data-sly-test="${model.showBackToTopButton}">
+            <a class="table-content-button" data-sly-attribute.href="#">
+                <span class="table-content-button__label">
+                    <span class="mdi mdi-arrow-up"></span>
+                    <span>${model.backToTopButtonLabel}</span>
+                </span>
+            </a>
+        </sly>
+    </div>
+  </sly>
 </sly>
