--- a/applications/common/frontend/src/atomic-design-system/01-atom/a.title.scss
+++ b/applications/common/frontend/src/atomic-design-system/01-atom/a.title.scss
@@ -64,4 +64,11 @@
     visibility: hidden;
     color: transparent !important;
   }
+  &.center {
+    & > span {
+      left: 50%;
+      width: 100%;
+      transform: translateX(-50%);
+    }
+  }
 }
