KYAN-245 add option to dialog with no wrap - instead text shrinking by testing it's height

--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/title/title.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/title/title.html
@@ -55,7 +55,7 @@
             </sly>
           </sly>
         <!--/* end */-->
-        <span class="${model.endingsClasses @ join=' '} typed-animation" data-show-cursor="${model.showCursor}" data-endings="${model.endingJson}" data-speed="${model.speed}" data-delay="${model.delay}">
+        <span class="${model.endingsClasses @ join=' '} typed-animation" data-no-title-wrapping="${model.noTitleWrapping}" data-show-cursor="${model.showCursor}" data-endings="${model.endingJson}" data-speed="${model.speed}" data-delay="${model.delay}">
         </span>
         <sly data-sly-test="${!model.showCursor}"><span class="typed-cursor" style="visibility: hidden" aria-hidden="true">|</span></sly>
       </div>
