--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/page/head-libs.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/page/head-libs.html
@@ -17,6 +17,7 @@
 */-->
 
 <sly data-sly-use.model="pl.ds.kyanite.common.components.models.PageHeadLibsComponent"></sly>
+<sly data-sly-test="${wcmmode.isDisabled}">
 <!-- Google Tag Manager -->
 <script data-sly-test="${model.hasAnalyticsUrl}">(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
       new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -24,6 +25,7 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','${model.googleAnalyticsTrackingId @ context="text"}');</script>
 <!-- End Google Tag Manager -->
+</sly>
 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link
