--- a/applications/common/frontend/src/components/Table/Table.scss
+++ b/applications/common/frontend/src/components/Table/Table.scss
@@ -61,6 +61,16 @@
           }
         }
       }
+      td {
+        &.icon-on-the-right {
+          .icon-text {
+            flex-direction: row-reverse;
+          }
+        }
+        .icon-text {
+          gap: 1rem;
+        }
+      }
     }
     &.is-first-column-locked {
       .table {
