--- a/applications/blogs/backend/src/main/resources/libs/kyanite/blogs/components/blogarticleauthorbio/templates/template-default.html
+++ b/applications/blogs/backend/src/main/resources/libs/kyanite/blogs/components/blogarticleauthorbio/templates/template-default.html
@@ -19,43 +19,37 @@
 
 <template data-sly-template.template="${ @ model}">
   <sly data-sly-test.author="${model.authorInfoModel}">
-    <article class="blog-article-author-bio layout-default container
-        is-flex is-flex-wrap-wrap is-justify-content-space-between">
-      <div class="author-bio-block author-info">
-        <div class="author-short-info is-flex is-flex-align-items-center">
-          <figure class="author-photo">
-            <p class="image is-96x96">
-              <sly data-sly-set.leadsToAuthorPage="
-              ${ (    (author.authorOwnerPath != null)
-                  &&  (author.authorOwnerPath != currentPage.path) ) }"></sly>
-              <a data-sly-unwrap="${!leadsToAuthorPage}"
-                 href="${author.authorOwnerUrl}" target="">
-                <img data-sly-test.authorPhoto="${author.authorPhoto}"
-                     src="${authorPhoto}" alt="${author.authorPhotoAlt}"
-                     class="is-rounded"
-                />
-              </a>
-            </p>
-          </figure>
-
-          <div class="content is-align-self-center">
-            <p data-sly-test.authorName="${author.authorName}"
-               class="author-name">${authorName}</p>
-            <p data-sly-test.authorRole="${author.authorRole}"
-               class="author-role">${authorRole}</p>
-          </div>
+    <article class="container blog-article-author-bio layout-default">
+      <div class="author-bio">
+        <figure class="author-photo">
+          <p class="image is-96x96">
+            <sly data-sly-set.leadsToAuthorPage="
+              ${((author.authorOwnerPath != null)
+               && (author.authorOwnerPath != currentPage.path))}"></sly>
+            <a data-sly-unwrap="${!leadsToAuthorPage}"
+              href="${author.authorOwnerUrl}" target="">
+              <img data-sly-test.authorPhoto="${author.authorPhoto}"
+                src="${authorPhoto}" alt="${author.authorPhotoAlt}"
+                class="is-rounded"
+              />
+            </a>
+          </p>
+        </figure>
+        <div class="author-info">
+          <span data-sly-test.authorName="${author.authorName}"
+              class="name">${authorName}</span>
+          <span data-sly-test.authorRole="${author.authorRole}"
+              class="role">${authorRole}</span>
         </div>
-
-        <div data-sly-test.authorDescription="${author.authorDescription}"
-             class="author-description content">
-          <p>${authorDescription}</p>
-        </div>
-
       </div>
-      <div class="author-bio-block social-media">
+
+      <div class="author-description">
+        <p data-sly-test.authorDescription="${author.authorDescription}">${authorDescription}</p>
+      </div>
+      <div class="author-links">
         <sly data-sly-set.socialMediaMode=
                  "${ (    (author.authorOwnerPath == currentPage.path)
-                       || (author.authorOwnerPath == resource.path))
+                 || (author.authorOwnerPath == resource.path))
                ? wcmmode.editModeAttribute
                : wcmmode.previewModeAttribute}"></sly>
         <sly data-sly-resource="${author.socialMedia @ requestAttributes=socialMediaMode}"></sly>
