WSIO-733 Enable configuring icons in table cells (#474)
* WSIO-733 Enable configuring left/right oriented icon for 'Table cell' Kyanite component.

* WSIO-733 change dialog and save draft html template

* WSIO-733 Align 'Table cell' Kyanite component's back-end implementation after dialog definition changes.

* WSIO-733 add styles to icon in table cell

---------

Co-authored-by: Martyna Szeszko <martyna.szeszko@ds.pl>

--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/table/tablecell/tablecell.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/table/tablecell/tablecell.html
@@ -17,7 +17,10 @@
 */-->
 
 <sly data-sly-use.model="pl.ds.kyanite.common.components.models.table.TableCellComponent">
-  <td rowspan="${model.rowspan}" colspan="${model.colspan}">
-    ${model.text @ context='unsafe'}
+  <td rowspan="${model.rowspan}" colspan="${model.colspan}" class="${model.showIcon && model.icon && model.iconOnTheRight ? 'icon-on-the-right' : ''}">
+    <sly data-sly-test="${model.showText}">
+      ${model.text @ context='unsafe'}
+    </sly>
+    <sly data-sly-test="${model.showIcon && model.icon}" data-sly-resource="${model.icon.path @ resourceType='kyanite/common/components/icon', requestAttributes = wcmmode.disabledModeAttribute}"/>
   </td>
 </sly>
