WSIO-1220 simplify table classes, correct styles

--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/table/table.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/table/table.html
@@ -33,7 +33,7 @@
           <i class="mdi mdi-arrow-right"></i>
         </button>
       </div>
-      <div class="table-wrapper ${model.isFirstColumnLocked ? 'is-first-column-locked' : ''}">
+      <div class="table-wrapper">
         <table class="${classes}">
           <sly
               data-sly-include="${'parsys.html' @ prependPath='/libs/wcm/foundation/components/parsys'}"></sly>
