WSIO-1192 manage Title element in BlogList and FeaturedArticle

--- a/applications/blogs/backend/src/main/resources/libs/kyanite/blogs/components/bloglist/bloglist.html
+++ b/applications/blogs/backend/src/main/resources/libs/kyanite/blogs/components/bloglist/bloglist.html
@@ -26,7 +26,9 @@
         </div>
         <div class="content">
           <div class="content-info">
-            <h6 class="title is-6" data-sly-test.title="${item.blogArticleHeader.title}">${title}</h6>
+            <h6 class="title is-6"
+                data-sly-element="${properties.element}"
+                data-sly-test.title="${item.blogArticleHeader.title}">${title}</h6>
             <div class="content-info-details">
               <p>
                 <sly data-sly-test.author="${item.authorInfo}">
