--- a/applications/blogs/backend/src/main/resources/libs/kyanite/blogs/components/bloglist/bloglist.html
+++ b/applications/blogs/backend/src/main/resources/libs/kyanite/blogs/components/bloglist/bloglist.html
@@ -26,7 +26,7 @@
         </div>
         <div class="content">
           <div class="content-info">
-            <h6 class="title is-6"
+            <h6 class="title ${properties.size}"
                 data-sly-element="${properties.element}"
                 data-sly-test.title="${item.blogArticleHeader.title}">${title}</h6>
             <div class="content-info-details">
