--- a/applications/common/frontend/src/components/index.scss
+++ b/applications/common/frontend/src/components/index.scss
@@ -38,6 +38,7 @@
 @use './BlogTableOfContent';
 @use './BlogBackButton';
 @use './Column';
+@use './ContactForm';
 @use './Container';
 @use './Carousel';
 @use './Panel';
