KYAN-282 add authorable paddings to Card component

--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/card/card.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/card/card.html
@@ -25,7 +25,7 @@
     <sly data-sly-set.backgroundStyle=""></sly>
   </sly>
 
-  <div class="card ${model.heightVariant} ${model.hasBackgroundImage ? 'with-background-image' : ''}"
+  <div class="card ${model.heightVariant} ${model.hasBackgroundImage ? 'with-background-image' : ''}  ${model.padding}"
        style="${backgroundStyle @ context='html'}">
     <sly data-sly-test="${model.header}">
       <header class="card-header">
