--- a/applications/common/frontend/src/components/Card/Card.scss
+++ b/applications/common/frontend/src/components/Card/Card.scss
@@ -29,6 +29,10 @@
     @extend .a-bg-image
   }
 
+  .card-content {
+    padding: 0;
+  }
+
   .card-redirect-anchor {
     position: absolute;
     left: 0;
