KYAN-277 change ContactForm success/error colors

--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/contactform/contactform.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/contactform/contactform.html
@@ -109,10 +109,10 @@
       </div>
     </div>
     <div class="block">
-      <div class="notification is-danger is-hidden form-failure mb-0">
+      <div class="notification is-danger is-light is-hidden form-failure mb-0">
         Something's wrong, try again
       </div>
-      <div class="notification is-success is-hidden form-success">
+      <div class="notification is-success is-light is-hidden form-success">
         Form submitted successfully
       </div>
     </div>
